Correct paths in example presentation

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=792, user-scalable=no">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
-	<link rel="stylesheet" href="node_modules/shower-ribbon/styles/screen.css">
+	<link rel="stylesheet" href="stylesheets/screen.css">
 </head>
 <body class="list">
 	<header class="caption">
@@ -169,7 +169,7 @@
 		just remove “progress” element.
 		-->
 	<div class="progress"><div></div></div>
-	<script src="node_modules/shower-core/shower.min.js"></script>
+	<script src="javascripts/shower.js"></script>
 	<!-- Copyright © 2014 Yours Truly, Famous Inc. -->
 	<!-- Photos by John Carey, fiftyfootshadows.net -->
 </body>
