--- a/source/stylesheets/_defaults.scss
+++ b/source/stylesheets/_defaults.scss
@@ -12,7 +12,8 @@ $break:1180px;  // Window width for small thumbnails to appear
 $ratio:'16x10'; // Available options: '16x10' or '4x3'
 
 // Colors
-$color:#52A2DF;
+$color:#3FA788;
+$background:#E9E9E9;
 $yellow:#FAFAC4;
 
 // Mixins
