Add generated code listings with markdown-syntax

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -78,18 +78,12 @@
 			<figcaption>Marcus Tullius Cicero</figcaption>
 		</figure>
 	</div></section>
+
 	<section class="slide"><div>
 		<h2>Code Samples</h2>
-		<pre>
-			<code>&lt;!DOCTYPE html&gt;</code>
-			<code>&lt;html lang="en"&gt;</code>
-			<code><mark>&lt;head&gt;</mark> <mark class="comment">&lt;!--Comment--&gt;</mark></code>
-			<code>    &lt;title&gt;Shower&lt;/title&gt;</code>
-			<code>    &lt;meta charset="<mark class="important">UTF-8</mark>"&gt;</code>
-			<code>    &lt;link rel="stylesheet" href="screen.css"&gt;</code>
-			<code><mark>&lt;/head&gt;</mark></code>
-		</pre>
+		<%= code_listing("test.c", "c") %>
 	</div></section>
+
 	<section class="slide"><div>
 		<h2>Even Tables</h2>
 		<table>
