--- a/source/stylesheets/screen.scss
+++ b/source/stylesheets/screen.scss
@@ -1,1 +1,7 @@
 @import 'theme';
+@import 'syntax';
+
+.highlight {
+    font-family: "Anka Coder";
+    background-color: rgba(255, 255,255, 0.4);
+}
