Include all.js instead of shower.js directly

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -163,7 +163,7 @@
 		just remove “progress” element.
 		-->
 	<div class="progress"><div></div></div>
-	<script src="javascripts/shower.js"></script>
+	<script src="javascripts/all.js"></script>
 	<!-- Copyright © 2014 Yours Truly, Famous Inc. -->
 	<!-- Photos by John Carey, fiftyfootshadows.net -->
 </body>
