progress can be seen

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -18,18 +18,47 @@
 
 		<img src="images/riot-logo.png" alt="">
 	</div></section>
+
 	<section class="slide"><div>
-		<h2>Shower Key Features</h2>
-		<ol>
-			<li>Built on HTML, CSS and vanilla JavaScript</li>
-			<li>All modern browsers are supported</li>
-			<li>Slide themes are separated from engine</li>
-			<li>Fully keyboard accessible</li>
-			<li>Printable to PDF</li>
-		</ol>
-		<p class="note">Shower ['ʃəuə] noun. A person or thing that shows.</p>
+		<h2>Who we are</h2>
+		<img class="fit" src="images/whoweare.png">
 	</div></section>
+
 	<section class="slide"><div>
+		<h2>What we're here for</h2>
+		<ul>
+			<li>Introducing the <span class="riot"><img src="images/riot-logo.png"></span></li>
+			<li>Built on <span class="riot"><img src="images/riot-logo.png"></span>– Watr.li</li>
+			<li>WIP: Getting your hands dirty!</li>
+		</ul>
+	</div></section>
+
+	<section class="slide"><div>
+		<h2>Architecture</h2>
+		<img class="fit" style="height: 126%" src="images/architecture.svg">
+	</div></section>
+
+	<section class="slide"><div>
+		<img class="fit" style="height: 126%; margin-top: -240px" src="images/architecture.svg">
+	</div></section>
+
+	<section class="slide"><div>
+		<div style="height: 440px; overflow: hidden;">
+			<table >
+				<tr>
+					<td style="vertical-align: top; font-size: 0.74em; line-height: 1">
+						<pre><code><%= code_listing_plain("dirtree.txt") %></code></pre>
+					</td>
+					<td style="vertical-align: top;">
+						<img style="width: 310px" src="images/architecture.svg">
+					</td>
+				</tr>
+			</table>
+		</div>
+
+	</div></section>
+
+	<section class="slide small-font"><div>
 		<h2>Plain Text on Your Slides</h2>
 		<p>Lorem ipsum dolor sit amet, consectetur <a href="#4">adipisicing</a> elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, <em>quis nostrud</em> exercitation ullamco laboris <strong>nisi ut aliquip</strong> ex ea commodo consequat. Duis aute irure <i>dolor</i> in reprehenderit in voluptate velit esse cillum <b>dolore</b> eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in <code>&lt;culpa&gt;</code> qui officia deserunt mollit anim id est laborum.</p>
 	</div></section>
