--- a/source/stylesheets/screen.scss
+++ b/source/stylesheets/screen.scss
@@ -4,6 +4,11 @@
 .highlight {
     font-family: "Anka Coder";
     background-color: rgba(255, 255,255, 0.4);
+    font-size: 24px;
+}
+
+.small-font {
+    font-size: 24px;
 }
 
 #Cover {
@@ -20,4 +25,20 @@
         width: 80%;
         position: relative;
     }
+}
+
+
+img.fit {
+    width: 100%;
+}
+
+span.riot {
+    overflow: hidden;
+}
+
+span.riot img {
+    height: 1.1em;
+    position: relative;
+    top: 2px;
+    left: -5px;
 }
