--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -110,11 +110,65 @@
 		</div>
 	</section>
 
-	<section class="slide">
+	<section class="slide cover"><div>
+		<h2>Meet: Plants!</h2>
+		<img src="images/happyplants.jpg" style="width: 100%" alt="">
+	</div></section>
+
+	<section class="slide heading">
 		<div>
-			<h2>WIP</h2>
+			<h2>The Setup</h2>
 		</div>
 	</section>
+
+	<section class="slide cover"><div>
+		<img src="images/samrsetup.jpg" style="width: 100%" alt="">
+	</div></section>
+
+	<section class="slide">
+		<div>
+			<div class="imagecontainer" style="width: 108%">
+				<img src="images/network-stack.png" style="width: 901px; left: 204px;">
+			</div>
+		</div>
+	</section>
+
+<!-- 	<section class="slide">
+		<div>
+			<div class="imagecontainer" style="width: 108%">
+				<img src="images/network-stack.png" style="width: 901px; left: -250px;">
+			</div>
+		</div>
+	</section> -->
+
+	<section class="slide">
+		<div>
+			<div class="imagecontainer" style="width: 115%">
+				<img src="images/network-stack.png" style="width: 901px; left: -47px;">
+			</div>
+		</div>
+	</section>
+
+
+	<section class="slide">
+		<div>
+			<h2>Screenshot of dashboard</h2>
+		</div>
+	</section>
+
+
+	<section class="slide">
+		<div>
+			<h2>Technologies used in dashboard</h2>
+			<ul>
+				<li>talk a little about californium?</li>
+			</ul>
+		</div>
+	</section>
+
+
+
+
 
 
 
