--- a/source/stylesheets/screen.scss
+++ b/source/stylesheets/screen.scss
@@ -104,6 +104,26 @@ pre.terminal code.output {
     opacity: 0.5;
 }
 
+div.imagecontainer {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    height: 500px;
+    border-radius: 5px;
+    position: relative;
+    margin: -54px auto;
+
+}
+
+div.imagecontainer > img {
+    position: absolute;
+    width: 500px;
+    left: 0;
+    top: 0;
+}
+
+
+
 .heading h2 {
     position:absolute;
     top:50%;
