--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -29,7 +29,7 @@
 		<ol>
 			<li>Introducing the <span class="riot"><img src="images/riot-logo.png"></span></li>
 			<li>Built on <span class="riot"><img src="images/riot-logo.png"></span>– Watr.li</li>
-			<li>WIP name: Getting your hands dirty!</li>
+			<li>Getting your hands dirty!</li>
 		</ol>
 	</div></section>
 
@@ -80,7 +80,7 @@
 			<h2>Do's</h2>
 			<ul>
 				<li>Use static memory</li>
-				<li>Select the priorities carefully</li>
+				<li>Choose priorities carefully TODO threads?</li>
 				<li>Minimize stack usage</li>
 				<ul>
 					<li><code>DEVELHELP / CREATE_STACKTEST</code></li>
@@ -126,7 +126,9 @@
 	</div></section>
 
 	<section class="slide">
+
 		<div>
+			<h2 style="position: absolute;">Network<br>stack</h2>
 			<div class="imagecontainer" style="width: 108%">
 				<img src="images/network-stack.png" style="width: 901px; left: 204px;">
 			</div>
@@ -150,23 +152,22 @@
 	</section>
 
 
-	<section class="slide">
+	<section class="slide cover">
 		<div>
-			<h2>Screenshot of dashboard</h2>
+			<img src="images/dashboard.png" style="width: 100%" alt="">
 		</div>
 	</section>
 
 
 	<section class="slide">
 		<div>
-			<h2>Technologies used in dashboard</h2>
+			<h2>The Dashboard</h2>
 			<ul>
-				<li>talk a little about californium?</li>
+				<li>Play web framework</li>
+				<li>Eclipse Californium as CoAP server</li>
 			</ul>
 		</div>
 	</section>
-
-
 
 
 
