--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -59,10 +59,10 @@
 
 	<section class="slide">
 		<div>
-			<h2>Getting the code! WIP</h2>
+			<h2>Getting the code!</h2>
 			<ul>
-				<li>link to the riot repository</li>
-				<li>git clone https://github.com/RIOT-OS/applications</li>
+				<li><a href="https://github.com/RIOT-OS/RIOT">https://github.com/RIOT-OS/RIOT</a></li>
+				<li><a href="https://github.com/RIOT-OS/applications">https://github.com/RIOT-OS/applications</a></li>
 			</ul>
 		</div>
 	</section>
@@ -537,6 +537,11 @@ eof
 			end %></pre>
 	</div></section> -->
 
+	<section class="slide heading">
+		<div>
+			<h2>End of the sneak peek!</h2>
+		</div>
+	</section>
 
 
 
@@ -554,11 +559,7 @@ eof
 	</div></section>
 
 
-	<section class="slide heading">
-		<div>
-			<h2>End of the sneak peek!</h2>
-		</div>
-	</section>
+
 
 
 	<section class="slide shout"><div>
