--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -43,14 +43,14 @@
 
 	<section class="slide">
 		<div>
-			<h2>Toolchain setup WIP</h2>
+			<h2>Toolchain setup</h2>
 			<ul>
 				<li>Either</li>
 				<ul>
 					<li>Use our VM</li>
-					<li>Setup the toolchain according to bit.ly/1Bv7Z8m</li>
+					<li>Setup the toolchain according to <a href="http://bit.ly/1Bv7Z8m">http://bit.ly/1Bv7Z8m</a></li>
 				</ul>
-				<li>Board information:https://github.com/RIOT-OS/RIOT/wiki/Board%3A-Samr21-xpro </li>
+				<li>Board information: <a href="http://bit.ly/1IUC4Dg">http://bit.ly/1IUC4Dg</a></li>
 			</ul>
 		</div>
 	</section>
